--- a/public/assets/css/bootstrap.css
+++ b/public/assets/css/bootstrap.css
@@ -6137,7 +6137,7 @@ a.badge:focus {
 }
 
 .hero-unit {
-  padding: 60px;
+  padding: 20px;
   margin-bottom: 30px;
   font-size: 18px;
   font-weight: 200;
@@ -6240,6 +6240,11 @@ a.btn{
 
 .well img {
   border: solid black 1px;
+}
+
+.medias{
+    width: 100%;
+    height: 320px;
 }
 
 .form-signin {
