--- a/view/posts/save.phtml
+++ b/view/posts/save.phtml
@@ -91,6 +91,16 @@ session_start();
                 <br><br>
                 <span>Corpo</span><i class="icon-arrow-down icons"></i>
                 <textarea class="input-block-level" rows="3"></textarea>
+                <br><br>
+                <div class="controls controls-row">
+                    <span>Tipo de Midia</span><i class="icon-arrow-down icons"></i>
+                    <select class="span2">
+                        <option value="">--------</option>
+                        <option value="video">Vídeo</option>
+                        <option value="img">Imagem</option>
+                    </select>
+                    <span>Midia</span>
+                </div>
             </div>
         </div>
     </div>
