--- a/view/posts/save.phtml
+++ b/view/posts/save.phtml
@@ -91,8 +91,9 @@ $_SESSION['id'] = 1;
                     <h3>Criando novo post...</h3>
                 </div>
                 <br>
-                <?php if($this->content){ ?>
+                <?php if(isset($this->content)){ ?>
                     <form action="/save" method="POST" enctype="multipart/form-data">
+                        <input type="hidden" name="id" value="<?php echo $this->content[0]['id'] ?>">
                         <span>Titulo</span><i class="icon-arrow-down icons"></i>
                         <input value="<?php echo $this->content[0]['titulo'] ?>" class="input-block-level" type="text" name="titulo" placeholder="Insira um titulo para seu post">
                         <br><br>
@@ -121,6 +122,7 @@ $_SESSION['id'] = 1;
                     </form>
                 <?php } else {?>
                     <form action="/save" method="POST" enctype="multipart/form-data">
+                        <input type="hidden" name="id">
                         <span>Titulo</span><i class="icon-arrow-down icons"></i>
                         <input class="input-block-level" type="text" name="titulo" placeholder="Insira um titulo para seu post">
                         <br><br>
