--- a/view/usuarios/save.phtml
+++ b/view/usuarios/save.phtml
@@ -1,9 +1,11 @@
-<?php $post[0]= array( 'status' =>'ativo','type' => 'img', 'media' => '/images/cabecalho.png' ,'title' => 'teste dos post muito loco tio', 'post' =>'teste ehaiushhasdlhalhuiashuasiuhasuihuiea aiuase huia ehiasiuhe auih eashuihe suih aes eahs eauhi asei as uhua uhiase iea huiaseu  ea uhieiu ash ueia hia euaih eiuash suh eawhuaiesu iea de linha'.chr(10).'quebrou', 'usuario' => 'jamelao');
-$post[1]= array('status' =>'ativo', 'type' => 'img', 'media' => '/images/avatar.jpg' ,'title' => 'teste dos post muito loco tio', 'post' =>'teste de linha'.chr(10).'quebrou', 'usuario' => 'jamelao');?>
-
-<!DOCTYPE HTML>
+<?php
+    if(!isset($_SESSION)){
+    session_start();
+    }
+?>
+<!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="utf-8">
     <title>Controlinho</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,160 +19,99 @@ $post[1]= array('status' =>'ativo', 'type' => 'img', 'media' => '/images/avatar.
 
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
+ 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
     <link rel="shortcut icon" href="/images/favicon.jpg" >
-</head>
+  </head>
 
-<body>
-<!-- MODAL DE LOGIN -->
-<div id="modal-login" class="modal hidden">
-    <div class="modal-header">
-        <span>Login: </span>
-        <a href="" class="close" >X</a>
-    </div>
-    <div class="modal-body">
-        <form action="/usuarios/login" method="POST">
-            <label class="modal-label">E-mail: </label>
-            <input type="text" name="email-login" placeholder="Digite seu E-mail aqui!" />
-            <label class="modal-label">Senha: </label>
-            <input type="password" name="senha-login" />
-            <a href="/usuarios/retrieve">Esqueceu a senha?</a><br>
-            <a href="/usuarios/save">Quer fazer um novo cadastro?</a><br><br>
-            <button class="btn-success" type="submit">Entrar</button>
-
-        </form>
-    </div>
+  <body>
+<!-- MODAL DE SESSAO -->
+<?php if(isset($_SESSION['username'])){ ?>
+<div id="modal-login" class="modal">
+        <div class="modal-header">
+            <span><?php echo $_SESSION['username']; ?>: </span>
+            <a href="#close" class="close" >X</a>
+        </div>
+        <div class="modal-body">
+                <h3>Oque deseja fazer?</h3>
+                <a href="/usuarios/index">Configuraçõs de usuário.</a><br>
+                <a href="/usuarios/logout">Sair.</a>
+        </div>
 </div>
+<?php }else{ ?>
+<div id="modal-login" class="modal">
+        <div class="modal-header">
+            <span>Login: </span>
+            <a href="#close" class="close" >X</a>
+        </div>
+        <div class="modal-body">
+            <form action="/usuarios/retrieve" method="POST">
+                <label class="modal-label">E-mail: </label>
+                <input type="text" name="email" placeholder="Digite seu E-mail aqui!" />
+                <label class="modal-label">Senha: </label>
+                <input type="password" name="senha" />
+                <a href="/usuarios/retrieve">Esqueceu a senha?</a><br>
+                <a href="/usuarios/save">Quer fazer um novo cadastro?</a><br><br>
+                <button class="btn-success" type="submit">Entrar</button>
+                
+            </form>
+        </div>
+</div>
+<?php } ?>
 <!-- MENU SUPERIOR -->
-<div class="navbar">
-    <img src="/images/cabecalho.png">
-    <div class="navbar-inner">
-        <div class="container-fluid">
+    <div class="navbar">
+    	<img src="/images/cabecalho.png">
+      	<div class="navbar-inner">
+        	<div class="container-fluid">
             <a class="btn-first"><img src="/images/buttons/botao_home.png"></a>
             <a class="btn-normal"><img src="/images/buttons/botao_about.png"></a>
             <a class="btn-normal"><img src="/images/buttons/botao_arcade.png"></a>
             <a class="btn-login" href="#modal-login"><img src="/images/buttons/botao_login.png"></a>
-        </div>
+       		 </div>
+      	</div>
     </div>
-</div>
-<!-- SIDEBAR -->
-<div class="container-fluid">
-    <div class="row-fluid">
-        <div class="span3">
-            <div class="well sidebar-nav">
-                <?php if(isset($_SESSION)){ ?>
-                    <img src="/images/<?=$_SESSION['avatar']?>">
-                    <br>
-                    <h4><?= $_SESSION['username']?></h4>
-                <?php } else { ?>
-                    <img src="/images/avatar.jpg">
-                    <br>
-                    <h4>Visitante</h4>
-                <?php } ?>
-            </div>
-        </div>
-        <div class="span9">
-            <?php foreach($post as $content) {
-                if ($content['status'] == 'ativo') {
-                    ?>
-                    <div class="hero-unit">
-                        <div class="popover-title">
-                            <h3><strong><?php echo $content['title']; ?></strong></h3><h5>Postado
-                                por:<?php echo $content['usuario']?></h5>
-                        </div>
-                        <hr>
-                        <!-- MENSAGENS DE ERRO -->
-                        <div id="error-nome" class="alert alert-error none">
-                            <a href="" class="close pull-right" >x</a>
-                            <h4>O campo nome não está correto, verifique!</h4>
-                        </div>
-                        <div class="popover-content">
-                            <?php if (isset($content['media']) && isset($content['type'])) { ?>
-
-                                <?php if ($content['type'] == 'img') { ?>
-                                    <img style="height: 320px;" src="<?php echo $content['media'] ?>">
-                                <?php } ?>
-                                <?php if ($content['type'] == 'video') { ?>
-                                    <iframe src="<?php echo $content['media'] ?>"></iframe>
-                                <?php } ?>
-
-                            <?php } ?>
-                        </div>
-                        <div class="popover-content center">
-                            <?php $texto = explode(chr(10), $content['post']);
-                            foreach ($texto as $paragrafo) {
-                                ?>
-                                <p><?php echo $paragrafo ?></p>
-                            <?php } ?>
-                        </div>
-                    </div>
-
-                <?php }
-            }?>
-        </div>
-    </div>
-    <div class="pagination pagination-centered">
-        <ul>
-            <li><a href="/controlinho">Anterior</a></li>
-            <li><a href="/controlinho/page/1">1</a></li>
-            <li><a href="/controlinho/page/2">2</a></li>
-            <li><a href="/controlinho/page/3">3</a></li>
-            <li><a href="#">Próxima</a></li>
-        </ul>
-    </div>
-
-    <footer class="lala">
-        <div id="error-email" class="alert alert-error none">
-            <a href="" class="close pull-right" >x</a>
-            <h4>O campo e-mail não está correto, verifique!</h4>
-        </div>
+<!-- MENSAGENS DE ERRO -->
+<?php if(isset($GLOBALS['error_auth'])){
+echo '<div id="error-nome" class="alert alert-error">
+    <a href="" class="close pull-right" >x</a>';
+    if($GLOBALS['error_auth'] == 'nome'){
+        echo '<h4>O campo nome não está correto, verifique!</h4>';
+    }
+    if($GLOBALS['error_auth'] == 'senha'){
+        echo '<h4>O campo senha é necessário, verifique!</h4>';
+    }
+    if($GLOBALS['error_auth'] == 'email'){
+        echo '<h4>O campo e-mail não está correto, verifique!</h4>';
+    }
+    if($GLOBALS['error_auth'] == 'email_existente'){
+        echo '<h4>Email já cadastrado, verifique!</h4>';
+    }
+echo '</div>';
+} ?>
         <div class="container">
             <div class="form-signin">
-                <form action="" method="POST">
-                    <h3> Novo Usuário:</h3>
-                    <label>Nome: </label>
-                    <input type="text" name="nome" placeholder="Digite seu nome aqui!" />
-                    <label>E-mail: </label>
-                    <input type="email" name="email" placeholder="exemplo@controlinho.com" />
-                    <label>Senha: </label>
-                    <input type="password" name="senha" /><br>
-                    <input type="submit" name="salvar" value="Enviar" class="btn-success btn-large" />
-                </form>
+            <form action="" method="POST">
+                  <h3> Novo Usuário:</h3>
+                  <label>Nome: </label>
+                  <input type="text" name="nome" placeholder="Digite seu nome aqui!" />
+                  <label>E-mail: </label>
+                  <input type="email" name="email" placeholder="exemplo@controlinho.com" />
+                  <label>Senha: </label>
+                  <input type="password" name="senha" /><br>
+                  <input type="submit" name="salvar" value="Enviar" class="btn-success btn-large" />
+                  <input type="reset" name="salvar" value="Limpar" class="btn-normal btn-large" />
+              </form>
             </div>
+    </div>
+ <footer class="lala">
+        <div class="center">
+          <p>Um oferecimento de Controlinho</p>
+          <p>&copy; 2015 - Felippe, Gabriel e Iuri</p>
         </div>
-        <footer class="lala">
-            <div class="center">
-                <p>Um oferecimento de Controlinho</p>
-                <p>&copy; 2015 - Felippe, Gabriel e Iuri</p>
-            </div>
-        </footer>
+      </footer>
 
-</div>
-<script src="../assets/js/bootstrap.js"></script>
-<script src="../assets/js/bootstrap.min.js"></script>
-<script src="../assets/js/jquery.js"></script>
-<script src="../assets/js/bootstrap-transition.js"></script>
-<script src="../assets/js/bootstrap-alert.js"></script>
-<script src="../assets/js/bootstrap-modal.js"></script>
-<script src="../assets/js/bootstrap-dropdown.js"></script>
-<script src="../assets/js/bootstrap-scrollspy.js"></script>
-<script src="../assets/js/bootstrap-tab.js"></script>
-<script src="../assets/js/bootstrap-tooltip.js"></script>
-<script src="../assets/js/bootstrap-popover.js"></script>
-<script src="../assets/js/bootstrap-button.js"></script>
-<script src="../assets/js/bootstrap-collapse.js"></script>
-<script src="../assets/js/bootstrap-carousel.js"></script>
-<script src="../assets/js/bootstrap-typeahead.js"></script>
-<script>
-    window.onload="pagination()";
-    function pagination() {
-        $(selector).pagination({
-            items: 100,
-            itemsOnPage: 10,
-        });
-    });
-</script>
-</body>
-</body>
+    <script src="../assets/js/bootstrap.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
+
+  </body>
 </html>
