--- a/view/usuarios/save.phtml
+++ b/view/usuarios/save.phtml
@@ -63,9 +63,9 @@
     	<img src="/images/cabecalho.png">
       	<div class="navbar-inner">
         	<div class="container-fluid">
-            <a class="btn-first"><img src="/images/buttons/botao_home.png"></a>
-            <a class="btn-normal"><img src="/images/buttons/botao_about.png"></a>
-            <a class="btn-normal"><img src="/images/buttons/botao_arcade.png"></a>
+            <a class="btn-first" href="/"><img src="/images/buttons/botao_home.png"></a>
+            <a class="btn-normal" href="/about/index"><img src="/images/buttons/botao_about.png"></a>
+            <a class="btn-normal" href="http://clickjogos.com.br"><img src="/images/buttons/botao_arcade.png"></a>
             <a class="btn-login" href="#modal-login"><img src="/images/buttons/botao_login.png"></a>
        		 </div>
       	</div>
